// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component matches snapshot 1`] = `
<form
  className="form"
>
  <label
    htmlFor="text"
  >
    Sentence or a paragraph to be highlighted
  </label>
  <br />
  <textarea
    cols="70"
    name="text"
    rows="3"
  />
  <label
    htmlFor="highlights"
  >
    Array of highlights objects
  </label>
  <br />
  <textarea
    cols="70"
    name="highlights"
    rows="10"
  />
  <pre
    name="example"
  >
    [{startOffset: 4, endOffset: 31, color: '#d9f593', priority: 2}]
  </pre>
  <input
    type="submit"
    value="Submit"
  />
</form>
`;

exports[`Form component renders without crashing  1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <label
    htmlFor="text"
  >
    Sentence or a paragraph to be highlighted
  </label>
  <br />
  <textarea
    cols="70"
    name="text"
    rows="3"
  />
  <label
    htmlFor="highlights"
  >
    Array of highlights objects
  </label>
  <br />
  <textarea
    cols="70"
    name="highlights"
    rows="10"
  />
  <pre
    name="example"
  >
    [{startOffset: 4, endOffset: 31, color: '#d9f593', priority: 2}]
  </pre>
  <input
    type="submit"
    value="Submit"
  />
</form>
`;
